fix exception on save profile