@@ -74,11 +74,28 @@ compose.desktop {
     application {
         mainClass = "MainKt"
 
+        jvmArgs += listOf(
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.text=ALL-UNNAMED",
+            "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
+        )
+
+
         buildTypes.release.proguard {
             isEnabled.set(false)
             //configurationFiles.from("proguard-rules.pro")
         }
         nativeDistributions {
+            jvmArgs += listOf(
+                "--add-modules=java.naming"
+            )
+            modules("java.naming")
+            modules("java.security.jgss")
+            modules("java.security.sasl")
+            includeAllModules = true
+
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb, TargetFormat.Rpm)
             packageName = "kubemanager"
             packageVersion = "1.0.3"
@@ -101,7 +118,6 @@ compose.desktop {
                 iconFile.set(project.file("kubernetes_manager_icon.png"))
                 exePackageVersion = packageVersion
                 msiPackageVersion = packageVersion
-                packageVersion = packageVersion
                 menuGroup = "Development;System;Network"
                 shortcut = true
                 upgradeUuid = "3181D6E5-84E3-4F1F-9153-531F1534859B"
